--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "nodemon server.js",
     "lint": "eslint .",
     "lint:fix": "eslint --fix",
-    "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
+    "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
+    "swagger": "node ./swagger.js"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +18,8 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongodb": "^6.7.0"
+    "mongodb": "^6.7.0",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.5.0",
@@ -29,6 +31,7 @@
     "globals": "^15.6.0",
     "nodemon": "^3.1.3",
     "peerdeps": "^1.1.1",
-    "prettier": "^3.3.2"
+    "prettier": "^3.3.2",
+    "swagger-autogen": "^2.23.7"
   }
 }
